# PyTorchModelImportTemplate

./: .gitmodules  CMakeLists.txt  README.md
src/: main.cxx
src/cbica_toolkit/: CMakeLists.txt
